Restored to '228885e98ba4d32702cc0cef6ec80d03b7974f97'
Replit-Restored-To: 228885e98ba4d32702cc0cef6ec80d03b7974f97

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "start:production": "npm run build && npm run preview"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@Beyond-Network-AI/beyond-ai": "file:beyond-ai-sdk",
