--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@Beyond-Network-AI/beyond-ai": "file:beyond-ai-sdk",
+    "@use-gesture/react": "^10.3.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
